testsuite/tests/indexed-types/should_compile/ClassEqContext3.hs
{-# LANGUAGE TypeFamilies #-}

module ClassEqContext  where 

class a ~ b => C a b

instance C Char Char
